correccion GetImagenesTienda
